objects/Funding_Round__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Potential_Acquisition__c</referenceTo>
        <relationshipLabel>Funding Round</relationshipLabel>
        <relationshipName>Funding_Round</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreMoney_Valuation__c</fullName>
        <label>PreMoney Valuation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seed</fullName>
                </value>
                <value>
                    <fullName>Series A</fullName>
                </value>
                <value>
                    <fullName>Series B</fullName>
                </value>
                <value>
                    <fullName>Series C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Funding Round</label>
    <nameField>
        <displayFormat>FR-{00}</displayFormat>
        <label>Funding Round Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Round</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>